crates/compiler/src/tests/e2e/bad/0038_struct_field_parse_error/main.gom
struct Config {
    width: int32,
    height: int32,
    title: string,
}

fn main() {
    let default = Config { width: 800, height: 600, title: "default" };
    let custom = Config { width: 1920, ..default };
    println(int32_to_string(custom.width));
    println(int32_to_string(custom.height));
    println(custom.title);
}
